[package]
name = "afetch"
version = "0.0.7"
authors = ["Asthowen<contact@asthowen.fr>"]
edition = "2021"
description = "A CLI system information tool written in Rust."
repository = "https://github.com/Asthowen/AFetch"
readme = "README.md"
license = "GPL-3.0"
keywords = ["fetch", "rust"]

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"
strip = true

[dependencies]
tokio = { version = "1.38.0", default-features = false, features = ["rt-multi-thread", "macros", "time", "fs"] }
serde_with = { version =  "3.8.1", features = ["macros"] }
serde = { version = "1.0.203", features = ["derive"] }
image = { version = "0.24.9", optional = true }
viuer = { version = "0.7.1", optional = true }
unicode-segmentation = "1.11.0"
strip-ansi-escapes = "0.2.0"
supports-unicode = "3.0.0"
starship-battery = "0.8.3"
afetch-colored = "2.0.4"
serde_yaml = "0.9.33"
sys-locale = "0.3.1"
sysinfo = "0.30.12"
futures = "0.3.30"
minreq = "2.11.2"
whoami = "1.5.1"
which = "6.0.1"
dirs = "5.0.1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
dbus = { version = "0.9.7", features=["futures"] }
dbus-tokio = "0.7.6"

[features]
default = []
image = ["dep:image", "dep:viuer"]