[package]
name = "afetch"
version = "0.0.7"
authors = ["Asthowen<contact@asthowen.fr>"]
edition = "2021"
description = "A CLI system information tool written in Rust."
repository = "https://github.com/Asthowen/AFetch"
readme = "README.md"
license = "GPL-3.0"
keywords = ["fetch", "rust"]

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"
strip = true

[dependencies]
tokio = { version = "1.40.0", default-features = false, features = ["rt-multi-thread", "macros", "time", "fs"] }
serde_with = { version =  "3.11.0", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
image = { version = "0.24.9", optional = true }
viuer = { version = "0.7.1", optional = true }
unicode-segmentation = "1.12.0"
strip-ansi-escapes = "0.2.0"
supports-unicode = "3.0.0"
starship-battery = "0.10.0"
afetch-colored = "2.0.4"
serde_yaml = "0.9.33"
sys-locale = "0.3.1"
sysinfo = "0.32.0"
minreq = "2.12.0"
whoami = "1.5.2"
which = "6.0.3"
dirs = "5.0.1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
tokio = { version = "1.40.0", default-features = false, features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
dbus = { version = "0.9.7", features = ["futures"] }
dbus-tokio = "0.7.6"

[features]
default = []
image = ["dep:image", "dep:viuer"]